--- a/web/templates/home.html
+++ b/web/templates/home.html
@@ -115,9 +115,7 @@
         <div class="left-section">
             <h2>Smart Door Lock</h2>
             <p>
-                Lorem ipsum dolor sit amet, consectetur adipiscing elit. 
-                Proin auctor justo nec metus ultricies, vel bibendum arcu ullamcorper.
-                Mauris vel dui ac metus fermentum sollicitudin vitae id ligula.
+                Tidak seperti pintu umumnya yang menggunakan kunci manual, smart door lock menghadirkan fitur canggih untuk membuka dan menutup pintu melalui Tap Kartu, Keypad, dan Push Button.
             </p>
         </div>
 
