--- a/web/templates/admin_profile.html
+++ b/web/templates/admin_profile.html
@@ -21,7 +21,7 @@
         }
 
         header {
-            background-color: #333;
+            background-color: #7d7979;
             padding: 10px;
             color: #fff;
             width: 100%;
@@ -54,7 +54,7 @@
         }
 
         .active-btn{
-            background-color: #2196F3;
+            background-color: #e61c1c;
             color: #fff;
             padding: 10px 20px;
             border: none;
@@ -82,7 +82,7 @@
 
 <body>
     <header>
-        <h1>{{ admin.full_name }}'s Profile</h1>
+        <h1>Data Users</h1>
     </header>
 
     <main>
