--- a/web/templates/index.html
+++ b/web/templates/index.html
@@ -17,7 +17,7 @@
         }
 
         header {
-            background-color: #333;
+            background-color: #7d7979;
             padding: 10px;
             color: #fff;
             width: 100%;
@@ -108,12 +108,14 @@
 
 <body>
     <header>
-        <h1>Welcome to Smart Door Lock</h1>
+        <h1>Smart Door Lock</h1>
     </header>
 
-    <main>
+    
+
+    <main>  
         <div class="left-section">
-            <h2>Smart Door Lock</h2>
+            <h2>Smart Door Lock ( Kunci Pintu Pintar )</h2>
             <p>
                 Tidak seperti pintu umumnya yang menggunakan kunci manual, smart door lock menghadirkan fitur canggih untuk membuka dan menutup pintu melalui Tap Kartu, Keypad, dan Push Button.
             </p>
@@ -122,7 +124,9 @@
         <div class="right-section">
                 <p>Please <a href="/login" class="login-btn">Login</a>or <a href="/register" class="register-btn">Register</a></p>
         </div>
-    </main>
-</body>
+    </main> 
 
+    
+</body>
+    
 </html>
