--- a/web/static/styletabel.css
+++ b/web/static/styletabel.css
@@ -15,10 +15,10 @@ th, td {
 }
 
 th {
-    background-color: #4CAF50;
+    background-color: #696969;
     color: white;
 }
-
+s
 tr:hover {
     background-color: #f5f5f5;
 }
