--- a/web/templates/login.html
+++ b/web/templates/login.html
@@ -22,7 +22,7 @@
             position: fixed;
             width: 100%;
             height: 100%;
-            background: url("{{ url_for('static', filename='network.jpg') }}") no-repeat center center fixed;
+            background: url("{{ url_for('static', filename='backd.jpeg') }}") no-repeat center center fixed;
             background-size: cover;
             background-position: center; /* Menengahkan gambar latar belakang */
             z-index: -1; /* Meletakkan latar belakang di lapisan belakang */
@@ -70,7 +70,7 @@
 
         /* Menghilangkan blur */
         .background {
-            filter: none;
+            filter: blur(5px);
         }
 
         /* Mengubah warna latar belakang tombol login menjadi biru */
