--- a/web/static/style.css
+++ b/web/static/style.css
@@ -1,91 +1,121 @@
-*{
-    margin:0;
-    padding: 0;
-    box-sizing: border-box;
-    font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
+@import url("https://fonts.googleapis.com/css2? family-Poppins:wght@300;400;500,600,700,800;9008 display-swap");
 
+* {
+     margin: 0; 
+     padding: 0; 
+     box-sizing: border-box;
+    font-family: "Poppins", sans-serif;
 
 }
-body{
-    display: flex;
-    justify-content: center;
+
+body { 
+    display: flex; 
+    justify-content: center; 
     align-items: center;
-    min-height: 100vf;
-    background: #155a97;
-
-}
-.container {
-    margin-top: 150px;
-    width: 100%;
-    display: flex;
-    max-width: 800px;
-    background: #fff;
-    border-radius: 15px;
-    box-shadow:0 10 15px rgba(0,0,0,0.1);
-   
+    min-height: 100vh; 
+    background: url('2222.jpg');  
+    background-size: cover;
+    background-position: center;
 }
 
-.login{
-    width: 400px;
-
-}
-form{
-    width: 270px;
-    margin: 60px auto;
-}
-
-h1 {
-    margin: 20px;
-    text-align: center;
-    font-weight: bolder;
-    text-transform: uppercase;
-}
-hr{
-    border-top: 2px solid #151500;
-}
-
-p{
-    text-align: center;
-    margin: 10px;
-
-}
-
-.right img {
-    width: 500px;
-    height: 100%;
-    border-top-right-radius: 15px;
-    border-bottom-right-radius: 15px;
-
-}
-form label{
-    display: block;
-    font-size: 16px;
-    font-weight: 600;
-    padding: 5px;
-
-}
-input{
-    width: 100%;
-    margin: 2px;
-    border: none;
-    outline: none;
-    padding: 8px;
-    border-radius: 5px;
-    border: 1px solid gray;
-
-}
-button{
-    border: none;
-    outline: none;
-    padding: 8px;
-    width: 252px;
+.wrapper {
+    width: 420px;
+    background: transparent;
+    border: 2px solid #fff;
     color: #fff;
-    font-size: 16px;
-    cursor: pointer;
-    margin-top: 20px;
-    border-radius: 5px;
-    background: #1f7cec;
+    border-radius: 10px;
+    padding: 30px 40px;
 }
-button:hover{
-    background: rgb(29, 30, 120)
+
+.wrapper h1{
+    font-size: 36px;
+    text-align: center;
+}
+
+.wrapper .input-box {
+    width: 100%;
+    height: 50px;
+    background:transparent;
+    margin: 30px 0;
+    border: #fff;
+    outline: #fff;
+}
+
+.input-box input{
+    width: 100%;
+    height: 100%;
+    background: transparent;
+    border:none ;
+    outline: #fff;
+    border: 2px solid rgba(255, 255, 255, .2);
+    border-radius: 40px;
+    font-size: 16px;
+    color: #fff;
+    padding: 20px 45px 20px 20px;
+    transition: all 0.5s ease-in-out;
+    animation: 0.3s ease-in-out;
+}   
+.input-box input:valid ~ i {
+    color: #121212;
+    animation: 0.3s ease-in-out;
+   }
+
+.input-box input::placeholder{
+    color: #fff;
+}
+
+.input-box i {
+    position: absolute;
+    right: 20px;
+    top: 50% ;
+    transform:translateY(-50%) ;
+    font-size: 20px;
+}
+
+.wrapper .remember-forgot{
+    display: flex;
+    justify-content: space-between;
+    font-size: 14.5px;
+    margin: -15px 0px 15px;
+}
+
+.remember-forgot label input{
+    accent-color: #fff;
+    margin-right: 3px;
+}
+
+.remember-forgot a {
+    color: #fff;
+    text-decoration: none;
+}
+
+.remember-forgot a:hover{
+    text-decoration: underline;
+}
+
+.wrapper .btn{
+    width: 100%;
+    height: 45px;
+    background:#fff ;
+    border:none ;
+    outline: none;
+    border-radius: 40px;
+    box-shadow: 0 0 10px rgba(0,0, 0, .1);
+    cursor: pointer;
+    font-size:16px ;
+    color:#333 ;
+    font-weight: 600;
+}
+.wrapper .register-link{
+    font-size:14.5px ;
+    text-align: center;
+    margin:20px 0 15px ;
+}
+.register-link p a {
+    color: #fff;
+    text-decoration: none;
+    font-weight: 600;
+}
+.register-link p a:hover{
+    text-decoration: underline;
 }
