--- a/web/templates/profile.html
+++ b/web/templates/profile.html
@@ -19,7 +19,7 @@
         }
 
         header {
-            background-color: #333;
+            background-color: #7d7979;
             padding: 10px;
             color: #fff;
             width: 100%;
@@ -64,11 +64,11 @@
         }
 
         .status-inactive {
-            background-color: #FF5722;
+            background-color: #ff2222;
             color: #fff;
         }
 
-        .logout-btn {
+        .button-btn {
             display: inline-block;
             padding: 10px 20px;
             margin-top: 20px;
@@ -81,7 +81,7 @@
             text-decoration: none;
         }
 
-        .logout-btn:hover {
+        .button-btn:hover {
             background-color: #D84315;
         }
     </style>
@@ -105,7 +105,7 @@
 
         <!-- Add additional user information as needed -->
 
-        <a href="/logout" class="logout-btn">Logout</a>
+        <a href="{{ url_for('home') }}" class="button-btn">Back to Home</a>
     </main>
 </body>
 
