--- a/web/templates/registration.html
+++ b/web/templates/registration.html
@@ -1,90 +1,30 @@
 <!DOCTYPE html>
+
 <html lang="en">
 
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Register</title>
-    <link rel="stylesheet" href="{{ url_for('static', filename='style2.css') }}">
-    <style>
-        body {
-            font-family: 'Arial', sans-serif;
-            margin: 0;
-            padding: 0;
-            display: flex;
-            flex-direction: column;
-            align-items: center;
-            /* overflow: hidden; Menghilangkan scrollbar yang muncul karena blur */
-        }
-
-        .background {
-            position: fixed;
-            width: 100%;
-            height: 100%;
-            background: url("{{ url_for('static', filename='backd.jpeg') }}") no-repeat center center fixed;
-            background-size: cover;
-            background-position: center; /* Menengahkan gambar latar belakang */
-            z-index: -1; /* Meletakkan latar belakang di lapisan belakang */
-        }
-
-        h1 {
-            color: #333;
-            text-align: center;
-            z-index: 1; /* Meletakkan teks di lapisan depan */
-        }
-
-        .form-container {
-            position: relative; /* Membuat posisi relatif terhadap latar belakang */
-            z-index: 1; /* Meletakkan elemen di lapisan depan */
-            display: flex;
-            flex-direction: column;
-            align-items: center;
-            text-align: center;
-            background-color: rgba(255, 255, 255, 0.8);
-            padding: 20px;
-            border-radius: 10px;
-            margin-top: 50px;
-        }
-
-        form {
-            display: flex;
-            flex-direction: column;
-            align-items: center;
-        }
-
-        label {
-            margin-top: 10px;
-        }
-
-        /* Styling untuk teks "REGISTER" pada kotak input */
-        .register-text {
-            font-size: 18px;
-            margin-bottom: 10px;
-            color: #333; /* Warna teks REGISTER */
-        }
-
-        /* Menghilangkan blur */
-        .background {
-            filter: blur(5px);
-        }
-
-        /* Mengubah warna latar belakang tombol register menjadi biru */
+    <title>Login</title>
+    <link rel="stylesheet" href="{{ url_for('static', filename='style.css') }}">
+</head>
+<style>
         input[type="submit"] {
-            background-color: #2196F3;
-            color: #fff;
-            padding: 10px 20px;
+            background-color: #ffffff;
+            color: #000000;
+            padding: 10px 55px;
             border: none;
-            border-radius: 5px;
+            border-radius: 25px;
             cursor: pointer;
         }
 
         input[type="reset"] {
-            background-color: #2196F3;
-            color: #fff;
-            padding: 10px 20px;
+            background-color: #ffffff;
+            color: #000000;
+            padding: 10px 65px;
             border: none;
-            border-radius: 5px;
+            border-radius: 25px;
             cursor: pointer;
         }
 
@@ -95,6 +35,7 @@
             border: none;
             color: #2196F3;
             cursor: pointer;
+            text-align: center;
             text-decoration: underline;
             margin-top: 10px;
         }
@@ -103,42 +44,43 @@
         .sign-up-btn:hover {
             color: #0b7dda;
         }
-
-
-    </style>
-</head>
+</style>
 
 <body>
-    <div class="background"></div>
-    <div class="form-container">
-        <form method="post" action="{{ url_for('register') }}">
-                <span class="register-text">REGISTER</span>
-                <label for="full_name">Full Name:</label>
-                <input type="text" id="full_name" name="full_name" placeholder="John Doe" required>
 
-                <label for="username">Username:</label>
-                <input type="text" id="username" name="username" placeholder="Johndoe" required>
+    <div class="wrapper">
+            <h1>Register</h1>
+            <form method="post" action="{{ url_for('register') }}"></form>
+            <div class="input-box">
+                <input type="text" placeholder="Username" required>
+                <i class='bx bxs-user'></i>
+            </div>
+            <div class="input-box">
+                <input type="text" placeholder="Email" required>
+                <i class='bx bxs-envelope'></i>
+            </div>
+            <div class="input-box">
+                <input type="password" placeholder="Password" required>
+                <i class='bx bxs-lock-alt'></i>
+            </div>
+            <div class="input-box">
+                <input type="password" placeholder="Confirm Password" required>
+                <i class='bx bxs-lock-alt'></i>
+            </div>
+            <div class="input-box">
+                <label for="card_uid"></label>
+                <input type="text" id="card_uid" name="card_uid" placeholder="Card UID (Tap Your Card)" id="liveUID">
+                <i class='bx bxs-lock-alt'></i>
+            </div>
 
-                <label for="email">Email:</label>
-                <input type="email" id="email" name="email" placeholder="example@gmail.com" required>
+            <input type="submit" value="Register" onclick="setCardUID()">
+            <input type="reset" value="Reset" onclick="resetUID()">
 
-                <label for="password">Password:</label>
-                <input type="password" id="password" name="password" required>
-
-                <label for="card_uid">Card UID</label>
-                <input type="text" id="card_uid" name="card_uid" placeholder="Tap your card" id="liveUID">
-
-                <!-- <div id="liveUID">
-                    <h3>Your UID</h3>
-                    <p id="liveUID"></p>
-                </div> -->
-
-                <input type="submit" value="Register" onclick="setCardUID()">
-                <input type="reset" value="Reset" onclick="resetUID()">
-
-                <div class="button-container">
-                    <a href="/login" class="login-btn">Already have an account? Login</a>
-                </div>
+            <div class="register-link">
+                <p>Already Have An Account? <a href="/login">Login</a></p>
+            </div>
+        </form>
+    </div>
 
     <script>
         // Fungsi untuk memperbarui UID di halaman registrasi
@@ -176,12 +118,12 @@
             var liveUIDElement = document.getElementById("liveUID");
             var cardUIDInput = document.getElementById("card_uid");
 
-            // Reset nilai UID dan card UID
-            liveUIDElement.innerText = "";
+
             cardUIDInput.value = "";
         }
 
         window.onload = listenForLiveUID;
     </script>
 </body>
+
 </html>
