--- a/web/templates/contact_info.html
+++ b/web/templates/contact_info.html
@@ -56,6 +56,6 @@
     <p>Contact Number:</p>
     <strong>Whatsapp : 0831312231 </strong>
     <strong>Email : admindoorlock@gmail.com</strong><br>
-    <a href="{{ url_for('home') }}">Back to Home</a>
+    <a href="{{ url_for('index') }}">Back to Home</a>
 </body>
 </html>
