--- a/web/templates/data_users.html
+++ b/web/templates/data_users.html
@@ -6,7 +6,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Admin Profile</title>
+    <title>Data Users</title>
     <link rel="stylesheet" href="{{ url_for('static', filename='styletabel.css') }}">
 </head>
 <style>
@@ -95,6 +95,7 @@
         .delete-btn:hover {
             background-color: #ca2828;
         }
+
 
 </style>
 
