--- a/web/templates/login.html
+++ b/web/templates/login.html
@@ -1,5 +1,4 @@
 <!DOCTYPE html>
-
 <html lang="en">
 
 <head>
@@ -13,7 +12,18 @@
 <body>
 
     <div class="wrapper">
-        <h1>Login</h1>
+        <h1>Login</h1><br>
+        
+        {% with messages = get_flashed_messages() %}
+            {% if messages %}
+                <div class="flash-messages">
+                    {% for message in messages %}
+                        <div class="flash-message">{{ message }}</div>
+                    {% endfor %}
+                </div>
+            {% endif %}
+        {% endwith %}
+        
         <form method="post" action="{{ url_for('login') }}">
             <div class="input-box">
                 <label for="username_email"></label>
